--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
-    background-color: lightblue;}
+    background-color: lightblue;
+    color:azure;
+}
     *{
         box-sizing: border-box;
     }
