--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,8 @@ body {
     *{
         box-sizing: border-box;
     }
+@media only screen and (max-width:480px){
+    body{
+        background-color: red;
+    }
+}
