--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,8 @@ body {
         background-color: red;
     }
 }
+@media only screen and (max-width:320px){
+    body{
+        background-color: yellow;
+    }
+}
