--- a/styles.css
+++ b/styles.css
@@ -13,5 +13,6 @@ body {
 @media only screen and (max-width:320px){
     body{
         background-color: yellow;
+        color:darkslategrey
     }
 }
