--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,18 @@ body {
     body{
         background-color: red;
     }
+    img{
+        float:none;
+        max-width:100%;
+    }
 }
 @media only screen and (max-width:320px){
     body{
         background-color: yellow;
         color:darkslategrey
     }
+}
+img{
+    float:right;
+    max-width:760px;
 }
